--- a/detalhes.html
+++ b/detalhes.html
@@ -27,6 +27,7 @@
         <h1>Pokedex Detalhes</h1>
 
         <h1 id="idPokeName"></h1>
+        <h1 id="idPokeNumber"></h1>
       
         <div class="pokemonImage">
             <img id="idPokeImage">
@@ -38,9 +39,14 @@
         <p id = "pokemonWeight">Weight: </p>
         <p id = "pokemonAbility">Ability: </p>
         <p id = "pokemonMove">Move: </p>
-        <ol id="pokemonDetalhes" class="pokemon">
-            
-        </ol>
+
+        <div class="pagination">
+            <a href="/index.html">
+                <button class="buttonVoltar" type="button"> 
+                    Voltar 
+                </button>
+            </a> 
+        </div>
     </section>
 
     <!-- Nosso JS -->
